Replaced Death World font w/ Morris

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Death World, Helvetica, Arial, sans-serif;
+    font-family: Morris, Helvetica, Arial, sans-serif;
     font-size: 2rem;
     text-decoration: none;
 }
@@ -7,8 +7,8 @@ body {
     margin: auto;
 }
 @font-face {
-    font-family: 'Death World';
-    src: url('./assets/Death\ World.ttf') format('truetype');
+    font-family: 'Morris';
+    src: url('./assets/MorrisRoman-Black.ttf') format('truetype');
     font-style: normal;
     font-weight: 400;
 }
