Added background-color to body in case of poor image crop

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 }
 body {
     margin: auto;
+    background-color: #1d1007;
     background-image: url('https://i.pinimg.com/originals/a2/5b/22/a25b22e84144d268eda0259491e51c88.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
