--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,11 @@ input {
     justify-content: space-evenly;
 }
 .square {
+    margin: 10px 0;
     font-size: 1rem;
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
