--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,10 @@ a:hover {
 .loading {
     font-family: Morris, Helvetica, Arial, sans-serif;
     font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 input {
     color: black;
